<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FollowMe</string>
    <string name="title">Follow Me</string>
    <string name="subtitle">A Memory Game</string>
    <string name="description">Observe the sequence of button presses, then see if you can repeat it correctly.</string>
    <string name="play_game">Play</string>
    <string name="high_scores">High Scores</string>
    <string name="clear_scores">High Scores</string>
    <string name="start_game">Start</string>
    <string name="get_ready">Get Ready!</string>
    <string name="press_start">Press Start!</string>
    <string name="player_turn">Your Turn - Repeat the Pattern</string>
    <string name="game_over">Game Over</string>

</resources>