<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical" >

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20sp"
    android:gravity="center_vertical|center_horizontal"
    android:text="@string/title"
    android:textSize="40sp"
    android:textStyle="bold"
    android:textColor="#FFF" />

<View
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:layout_weight="1" />

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal" >

    <Button
        android:id="@+id/button0"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="5dip"
        android:background="@drawable/redbutton"
        android:onClick="button0Clicked" />

    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="5dip"
        android:background="@drawable/bluebutton"
        android:onClick="button1Clicked" />

</LinearLayout>

<TextView
    android:id="@+id/game_level"
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:gravity="center_vertical|center_horizontal"
    />

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal" >

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="5dip"
        android:background="@drawable/yellowbutton"
        android:onClick="button2Clicked" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="5dip"
        android:background="@drawable/green-button"
        android:onClick="button3Clicked" />

</LinearLayout>

<View
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:layout_weight="1" />

<TextView
    android:id="@+id/game_status"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal"
    android:text="@string/press_start"
    android:textSize="22sp" />

<View
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:layout_weight="1" />

<ImageButton
    android:id="@+id/start_game"
    android:contentDescription="@string/start_game"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10sp"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@drawable/start_button"
    android:onClick="startGame"
    android:textSize="24dp" />

</LinearLayout>
