<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/title"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/off_white" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/high_scores"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp" >

        <TableRow>
            <TextView
                android:id="@+id/high_score_name0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip" />
            <TextView
                android:id="@+id/high_score0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip"
                android:layout_marginLeft="40sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/high_score_name1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip" />
            <TextView
                android:id="@+id/high_score1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip"
                android:layout_marginLeft="40sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/high_score_name2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip" />
            <TextView
                android:id="@+id/high_score2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip"
                android:layout_marginLeft="40sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/high_score_name3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip" />
            <TextView
                android:id="@+id/high_score3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip"
                android:layout_marginLeft="40sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/high_score_name4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip" />
            <TextView
                android:id="@+id/high_score4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip"
                android:layout_marginLeft="40sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/high_score_name5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip" />
            <TextView
                android:id="@+id/high_score5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip"
                android:layout_marginLeft="40sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/high_score_name6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip" />
            <TextView
                android:id="@+id/high_score6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip"
                android:layout_marginLeft="40sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/high_score_name7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip" />
            <TextView
                android:id="@+id/high_score7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip"
                android:layout_marginLeft="40sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/high_score_name8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip" />
            <TextView
                android:id="@+id/high_score8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip"
                android:layout_marginLeft="40sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/high_score_name9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip" />
            <TextView
                android:id="@+id/high_score9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="26sp"
                android:textStyle="bold"
                android:padding="3dip"
                android:layout_marginTop="6dip"
                android:layout_marginLeft="40sp" />
        </TableRow>
    </TableLayout>

    <View
        android:layout_height="0dip"
        android:layout_width="fill_parent"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/clear_scores"
        android:contentDescription="@string/clear_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="10sp"
        android:background="@drawable/clear_button"
        android:onClick="clearScoresButtonClicked"
        android:textSize="24dp" />

</LinearLayout>
